--- a/index.html
+++ b/index.html
@@ -23,55 +23,55 @@
     </ul>
     </header>
     <main>
-        <div class="hero"> 
+        <section class="hero"> 
             <img class="hero-image" src="./assets/images/digital-marketing-meeting.jpg" alt="Four people in a conference room looking at a desk, working"/>
-        </div>
-        <div class="content">
-            <div id="search-engine-optimization" class="main-section">
+        </section>
+        <section class="content">
+            <section id="search-engine-optimization" class="main-section">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook on a desk with computer, cup of coffee, and writing utensils." class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </div>
-            <div id="online-reputation-management" class="main-section">
+            </section>
+            <section id="online-reputation-management" class="main-section">
                 <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with the word 'Reputation' on the screen" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
-            </div>
-            <div id="social-media-marketing" class="main-section">
+            </section>
+            <section id="social-media-marketing" class="main-section">
                 <img src="./assets/images/social-media-marketing.jpg" alt="Top down view of people's hands around a desk with icons in circles like phones, cameras, and speech bubbles" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
-            </div>
-        </div>
-            <div class="benefits">
-                <div class="benefit">
+            </section>
+        </section>
+            <section class="benefits">
+                <section class="benefit">
                     <h3>Lead Generation</h3>
                     <img src="./assets/images/lead-generation.png" alt="Funnel with half of a cogwheel on top and a coin with a dollar sign on the bottom" />
                     <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                     </p>
-                </div>
-                <div class="benefit">
+                </section>
+                <section class="benefit">
                     <h3>Brand Awareness</h3>
                     <img src="./assets/images/brand-awareness.png" alt="Person with suit, tie, and lightbulb for head with sound waves coming off the right and left" />
                     <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                     </p>
-                </div>
-                <div class="benefit">
+                </section>
+                <section class="benefit">
                     <h3>Cost Management</h3>
                     <img src="./assets/images/cost-management.png" alt="Cogwheel with coins in front"/>
                     <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                     </p>
-                </div>
-            </div>    
+                </section>
+            </section>    
     </main>
     <footer>
             <h2>Made with ❤️️ by Horiseon</h2>
